sandbox/output
Anagram.java:4: error: cannot find symbol
    public List<String> generate(String string) {
           ^
  symbol:   class List
  location: class Anagram
1 error
